# stm

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  STM.prd  config.example.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
docs/ai-notes/: RELEASE_AUTOMATION_IMPLEMENTATION.md
src/: action.rs  app.rs  error.rs  event.rs  main.rs  tui.rs
src/ssh/: config.rs  connection.rs  mod.rs  tunnel.rs
src/state/: history.rs  mod.rs  persistence.rs
src/ui/: add_modal.rs  host_list.rs  mod.rs  status_bar.rs  theme.rs  tunnel_list.rs
