[package]
name = "stm"
version = "0.1.0"
edition = "2021"
description = "SSH Tunnel Manager - VS Code-like SSH port forwarding in the terminal"
license = "MIT"
repository = "https://github.com/hmica/stm"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
thiserror = "2"
anyhow = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
